wordpress/sophie/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wordpress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  rules:
  - host: sophix.me
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress
          servicePort: 8080
  - host: sophie.raynix.info
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress
          servicePort: 8080
